elk bien configurer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ bezkoder.app.jwtExpirationMs= 86400000
 
 spring.security.oauth2.client.registration.github.client-id=390262bc89cfa3443df4
 spring.security.oauth2.client.registration.github.client-secret=5c606d9269f09ab705d0aeddbd6abbf4811029d9
+
+
+logging.file.name = elktest.log
+spring.application.name = secucom
